<resources>
    <string name="app_name">Studelper</string>
    <string name="title_home">Профиль</string>
    <string name="title_dashboard">Главная</string>
    <string name="title_notifications">Уведомления</string>
    <string name="button_about">О Вузе</string>
    <string name="button_mark">Мои оценки</string>
    <string name="button_timesheet">Расписание</string>
    <string name="button_floor_plan">Схема этажей</string>
    <string name="button_documents">Документы</string>
    <string name="about_YRGU">ЯрГУ – университет, открытый современным и будущим возможностям,
        который обеспечивает конкурентоспособность Ярославской области и Верхневолжского региона
        за счет формирования человеческого и научно-технического потенциала, участия в
        сбалансированном обновлении традиционных и развитии постиндустриальных отраслей экономики,
        адаптации и трансфера лучших мировых управленческих и социальных практик. \n
        \nНАШ АДРЕС:
        \n150003, г. Ярославль, ул. Советская, д.14

        \nтел: +7 (4852) 79-77-02

        \nфакс: +7 (4852)25-57-87

        \nemail: rectorat@uniyar.ac.ru
        \nПодробнее на сайте: <u>https://www.uniyar.ac.ru/</u>
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


</resources>